﻿[28/01/2018] Version 1.0.4
Correction du bug consistant à pouvoir démarrer une nouvelle session de l'application quand elle est déjà lancée.

[27/01/2018] Version 1.0.3
Redémarrage après application des paramètres.

[25/01/2018] Version 1.0.2
Possibilité de modifier la date d'échéance.
Correction de bug mineurs.

[24/01/2018] Version 1.0.1
Correction de bugs mineurs.

[24/01/2018] Version 1.0.0
Première version de l'application.