@@ -18,11 +18,11 @@ namespace PostIt.Classes
             {
                 new Categorie { Nom="Message à un collaborateur", Abrv="MSG", Actif=true },
                 new Categorie { Nom="Demande prix", Abrv="DPX", Actif=true },
-                new Categorie { Nom="Suivi réparation", Abrv="REP", Actif=true },
-                new Categorie { Nom="Pochette photo/video", Abrv="PHO", Actif=true },
+                new Categorie { Nom="Suivi de réparation", Abrv="REP", Actif=true },
+                new Categorie { Nom="Pochette photo/video perdue", Abrv="PHO", Actif=true },
                 new Categorie { Nom="Rappel agenda", Abrv="AGD", Actif=true },
                 new Categorie { Nom="Livraison à convenir", Abrv="LIV", Actif=true },
-                new Categorie { Nom="Commande spéciale", Abrv="CDS", Actif=true },
+                new Categorie { Nom="Suivi de commande", Abrv="CDS", Actif=true },
                 new Categorie { Nom="Attente virement", Abrv="VIR", Actif=true },
                 new Categorie { Nom="Demande de transfert", Abrv="TRS", Actif=false },
                 new Categorie { Nom="A faire", Abrv="TAF", Actif=true },
